# updated_research_agent

./: README.md  app.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  config.py  main.py  memory.py  persistence.py  pyproject.toml  requirements.txt  state.py  ui.py
graph/: builder.py  nodes_exec.py  nodes_post.py  nodes_pre.py  routes.py
output/: research_report_20260227_130212.md  research_report_20260227_141720.md  research_report_20260227_141848.md  research_report_20260227_142001.md  research_report_20260227_142021.md  research_report_20260227_142102.md  research_report_20260227_142110.md  research_report_20260227_142238.md  research_report_20260227_142315.md  research_report_20260227_142333.md  research_report_20260227_142722.md  research_report_20260227_142746.md  research_report_20260227_142901.md  research_report_20260227_143013.md  research_report_20260227_143042.md  research_report_20260227_143200.md  research_report_20260227_143839.md  research_report_20260227_143935.md  research_report_20260227_144157.md  research_report_20260227_144335.md  research_report_20260227_144828.md  research_report_20260227_145255.md  research_report_20260227_145508.md  research_report_20260227_145720.md  research_report_20260227_150312.md  research_report_20260227_150941.md  research_report_20260227_151532.md  research_report_20260227_152035.md  research_report_20260227_152454.md  research_report_20260227_152617.md  research_report_20260227_153627.md  research_report_20260227_153727.md  research_report_20260227_154339.md  research_report_20260227_154623.md  (+13 more)
(+14 files in other folders)
